--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,32 +60,32 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 if(NOT "${AParMooN_ARCH}" STREQUAL "CRAY64")
 # search the blas in the system, if available it will be default
 message("==================Searching BLAS in the System - begin===================================================")
+if(AParMooN_USE_SYSTEM_MKLBLAS)
+    message("Searching MKL BLAS ...")
+    find_package(MKLBLAS REQUIRED)
+    include_directories(${BLAS_INCLUDE_DIRS})
+    if(CMAKE_VERBOSE_MAKEFILE)
+      if(BLAS_FOUND)
+        message("Available system BLAS_LIB =${BLAS_LIBRARIES}")
+      elseif(NOT BLAS_FOUND)
+        message("MKL BLAS_NOT_FOUND in your system, searching ...")
+      endif(BLAS_FOUND)
+    endif(CMAKE_VERBOSE_MAKEFILE)  
+endif(AParMooN_USE_SYSTEM_MKLBLAS)
 
-if(AParMooN_USE_SYSTEM_BLAS)
+if(NOT BLAS_FOUND)
+# if(AParMooN_USE_SYSTEM_BLAS)
   find_package(BLAS)
   include_directories(${BLAS_INCLUDE_DIRS})
   if(CMAKE_VERBOSE_MAKEFILE)
     if(BLAS_FOUND)
       message("Available system BLAS_LIB =${BLAS_LIBRARIES}")
     elseif(NOT BLAS_FOUND)
-      message("BLAS_NOT_FOUND in your system, Searching in ParMooN")
+       message("BLAS_NOT_FOUND in your system, BLAS must be linked before compiling")
     endif()
   endif()
-endif(AParMooN_USE_SYSTEM_BLAS)
-
-if(NOT BLAS_FOUND)
-    message("BLAS_NOT_FOUND in your system, Searching in ParMooN")
-    find_package(ACMLBLAS REQUIRED)
-    include_directories(${BLAS_INCLUDE_DIRS})
-    if(CMAKE_VERBOSE_MAKEFILE)
-      if(BLAS_FOUND)
-        message("Available system BLAS_LIB =${BLAS_LIBRARIES}")
-      elseif(NOT BLAS_FOUND)
-        message("BLAS_NOT_FOUND in ParMooN")
-      endif(BLAS_FOUND)
-    endif(CMAKE_VERBOSE_MAKEFILE)        
+# endif(AParMooN_USE_SYSTEM_BLAS)
 endif(NOT BLAS_FOUND)
-
 message("==================Searching BLAS in the System - end=====================================================")
 
 message("BLAS_LIBRARIES  = ${BLAS_LIBRARIES}")
