--- a/src/System/CMakeLists.txt
+++ b/src/System/CMakeLists.txt
@@ -11,12 +11,25 @@ list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/SystemTCD2D.C")
 list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/SystemTNSE2D_FDM.C")
 list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/SystemTNSE2D.C")
 
+list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/CDSystemTimeDG.C")
+list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/CDSystemTimeDG_1.C")
+
+list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/SystemTCD2D_ALE.C")
+list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/SystemTNSE2D_ALE.C")
+
+list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/SystemCST2D.C")
+list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/SystemCST2D_Giesekus.C")
+list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/SystemNSECST2D.C")
+list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/SystemTNSECST2D.C")
+list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/SystemTNSECST2D_ALE.C")
+
 elseif("${AParMooN_GEO}" STREQUAL "3D")
 list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/AssembleMat3D.C")
 list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/SystemCD3D.C")
 list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/SystemTCD3D.C")
 list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/SystemNSE3D.C")
 list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/SystemTNSE3D.C")
-
+list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/SystemTNSE3D_ALE.C")
+list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/System_6DOF.C")
 endif("${AParMooN_GEO}" STREQUAL "2D")
 add_library(sys STATIC ${SYST_SOURCES})
