--- a/src/System/CMakeLists.txt
+++ b/src/System/CMakeLists.txt
@@ -26,6 +26,7 @@ list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/SystemTNSECST2D_ALE.C
 elseif("${AParMooN_GEO}" STREQUAL "3D")
 list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/AssembleMat3D.C")
 list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/SystemCD3D.C")
+list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/SystemHyperElast3D.C")
 list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/SystemTCD3D.C")
 list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/SystemNSE3D.C")
 list(APPEND SYST_SOURCES "${PROJECT_SOURCE_DIR}/src/System/SystemTNSE3D.C")
